plugins {
    id 'application'

    id 'se.patrikerdes.use-latest-versions' version '0.2.18'

    id 'com.github.ben-manes.versions' version '0.41.0'

    id 'checkstyle'
}

group = 'hexlet.code'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'info.picocli:picocli:4.7.4'
}
jar {
    manifest {
        attributes(
            "Main-Class": "hexlet.code.App"
        )
    }
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it 
: zipTree(it) } }
}

test {
    useJUnitPlatform()
}

application {
    // Входная точка
    mainClass = 'hexlet.code.App'
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

run {
    jvmArgs += ["--enable-preview", "-Xlint:preview"]
    standardInput = System.in
}


tasks.withType(JavaCompile) {
    options.compilerArgs += ['--enable-preview','-Xlint:preview']
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += "--enable-preview"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

